[package]
name = "bad_apple"
version = "0.1.0"

[dev-dependencies]
threadpool = "1.8.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
[profile.dev]
opt-level = 1
[profile.bench]
opt-level = 3

[dependencies]
crossterm = "*"
ratatui = "*"
image = "*"
criterion = "*"
